# MuseAI

./: .env.example  .gitignore  CLAUDE.md  CONFIGURATION.md  README.md  README_CN.md  README_EN.md  alembic.ini  codex.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  .env.test  conftest.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 000_initial_schema.py  001_add_user_role_column.py  002_add_created_at_indexes.py  20250106_add_exhibits_tour_paths_profiles.py  20250408_add_prompts_tables.py  20260415_add_tour_tables.py  20260420_add_halls_table_backfill.py  20260425_add_llm_trace_events.py
backend/app/: main.py
backend/app/api/: _shared_responses.py  admin.py  auth.py  chat.py  client_ip.py  curator.py  deps.py  documents.py  exhibits.py  health.py  profile.py  tour.py  tts.py
backend/app/application/: auth_service.py  chat_message_service.py  chat_service.py  chat_session_service.py  chat_stream_service.py  chunking.py  content_source.py  context_manager.py  curator_service.py  document_filter.py  document_service.py  error_handling.py  exhibit_indexing_service.py  exhibit_service.py  hall_normalizer.py  ingestion_service.py  profile_service.py  prompt_gateway.py  prompt_service.py  prompt_service_adapter.py  retrieval.py  sse_events.py  tour_chat_service.py  tour_event_service.py  tour_report_service.py  tour_session_service.py  tts_service.py  tts_streaming.py  unified_indexing_service.py
backend/scripts/: migrate_prompts.py  seed_tts_prompts.py
backend/tests/: conftest.py
deploy/: nginx.conf
docker/elasticsearch/: Dockerfile
docs/: TECHNICAL_DEBT_AUDIT_2026-04-06.md  TECHNICAL_DEBT_REPORT.md  ai_latency_diagnostics.md  backend_diff_report.md  banpo_data_audit.md  handoff-report-2026-04-04-phase1.md  handoff-report.md  stage10a_latency_diagnosis.md
docs/audit/: 2026-04-08-remediation-summary.md  2026-04-09-technical-debt-audit.md  2026-04-17-midterm-technical-debt-audit.md
docs/plans/: 2026-04-04-api-test-frontend-design.md  2026-04-04-api-test-frontend.md  2026-04-04-langchain-rag-integration-design.md  2026-04-04-langchain-rag-integration-plan.md  2026-04-04-museai-v2-design.md  2026-04-04-museai-v2-implementation.md  2026-04-04-phase0-e2e-test-design.md  2026-04-04-phase0-e2e-test-implementation.md  2026-04-05-museum-qa-frontend-design.md  2026-04-05-museum-qa-frontend-plan.md  2026-04-05-phase3-design.md  2026-04-05-phase3-implementation.md  2026-04-05-test-data-init-design.md  2026-04-05-test-data-init.md  2026-04-06-tech-debt-audit-design.md  2026-04-06-tech-debt-audit-implementation.md  2026-04-08-midterm-14-issue-remediation-plan.md  2026-04-09-remediation-plan.md  2026-04-17-B0-safety-hotfixes-plan.md  2026-04-17-B1-ci-guardrails-plan.md  2026-04-17-B2-architecture-unification-plan.md  2026-04-17-B3-sse-contract-extraction-plan.md  2026-04-17-B4-core-service-tests-plan.md  2026-04-17-B5-security-hardening-plan.md  2026-04-17-B6-performance-observability-plan.md  2026-04-19-remaining-debt-consolidated-plan.md
docs/reference/: 展品.md
docs/security/: llm-trace-data-policy.md  public-document-read-policy.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.vue  main.js
scripts/: bootstrap_admin.py  cleanup_llm_traces.py  import_real_exhibits_via_api.py  init_db.py  init_exhibits.py  init_test_data.py  run_debt_marker_scan.sh  seed_dev_user.py  seed_prompts_and_personas.py  setup-worktree-env.sh  verify_local_quality.sh
(+405 files in other folders)
