[project]
name = "museai"
version = "0.1.0"
description = "MuseAI - Museum AI Guide System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "elasticsearch>=8.15.0,<9.0.0",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "openai>=1.57.0",
    "aiohttp>=3.13.5",
    "langchain>=1.2.14,<2.0.0",
    "langchain-core>=1.2.22,<2.0.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-openai>=1.1.12,<2.0.0",
    "langchain-elasticsearch>=1.0.0,<2.0.0",
    "langgraph>=1.1.3,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
